--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -1,5 +1,5 @@
 name: Enhanced Drupal PHPUnit Results
-on: [push, pull_request, pull_request_review, workflow_dispatch]
+on: [push, pull_request, pull_request_review, workflow_dispatch, pull_request_target]
 jobs:
   code-style:
     runs-on: ubuntu-latest
